# yolov11cpp

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  main.out
src/: camera_inference.cpp  camera_inference.out  input.mov  viewer.cpp  viewer.out
src/ia/: YOLO11.hpp
src/ia/tools/: BoundedThreadSafeQueue.hpp  Config.hpp  Debug.hpp  ScopedTimer.hpp
src/kotlin/: AndroidManifest.xml  MainActivity.kt  ModelParseActivity.kt  TFLiteModelManager.kt  YOLO11Detector.kt  build.gradle  build.gradle.kts
src/kotlin/res/layout/: activity_model_parse.xml
