cmake_minimum_required(VERSION 3.10)

# Set the project name in a variable
set(project_name yolov10_cpp)
project(${project_name})
set(CMAKE_CXX_STANDARD 17)

find_package(OpenCV REQUIRED)

# Find ONNX Runtime package
set(ONNXRUNTIME_INCLUDE_DIR ./onnxruntime-linux-x64-1.23.2/include)
set(ONNXRUNTIME_LIBRARY /home/mavlab/dronerace/vision/yolov11cpp/onnxruntime-linux-x64-1.23.2/lib/libonnxruntime.so)

if(NOT ONNXRUNTIME_INCLUDE_DIR)
    message(FATAL_ERROR "ONNX Runtime include directory not found")
endif()
if(NOT ONNXRUNTIME_LIBRARY)
    message(FATAL_ERROR "ONNX Runtime library not found")
endif()

# add_library(${project_name}-lib
    
# )


# Add the main executable
add_executable(${project_name} 
    ./src/camera_inference.cpp
)

target_include_directories(${project_name} PUBLIC src)
target_include_directories(${project_name} PUBLIC src/ia)
target_include_directories(${project_name} PUBLIC ${ONNXRUNTIME_INCLUDE_DIR})

target_link_libraries(${project_name}
    PUBLIC ${OpenCV_LIBS}
    PUBLIC ${ONNXRUNTIME_LIBRARY}
)

# target_include_directories(${project_name} PUBLIC ${ONNXRUNTIME_INCLUDE_DIR})
# target_link_libraries(${project_name} ${project_name}-lib)

# # Add the video executable
# add_executable(${project_name}_video 
#     ./src/video.cpp
# )
# target_include_directories(${project_name}_video PUBLIC ${ONNXRUNTIME_INCLUDE_DIR})
# target_link_libraries(${project_name}_video ${project_name}-lib)

